--- a/NetworkClient/src/ru/geekbrains/java2/client/view/ClientChat.form
+++ b/NetworkClient/src/ru/geekbrains/java2/client/view/ClientChat.form
@@ -9,7 +9,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="f810b" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f810b" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Center"/>
         <properties/>
@@ -26,7 +26,7 @@
           <grid id="879d6" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -38,7 +38,7 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <margin top="3" left="8" bottom="3" right="8"/>
+                  <margin top="2" left="6" bottom="2" right="6"/>
                 </properties>
               </component>
               <component id="af4d2" class="javax.swing.JButton" binding="sendButton" default-binding="true">
@@ -51,6 +51,14 @@
               </component>
             </children>
           </grid>
+          <component id="3b12a" class="javax.swing.JButton" binding="newNameButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="New name"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="2e212" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
